<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_styles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bnz8.uw.tacoma.edu.lookandfeel2.StylesActivity">

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/emailTextView"
        android:text=""
        style="@style/EditTextStyle"
        android:hint="@string/emailHint"
        />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTextView"
        android:text=""
        android:hint="@string/passwordHint"
        style="style/PwdEditTextStyle"
        android:layout_toRightOf="@id/emailTextView"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button"
        android:text="@string/submitButton"
        style="@style/uw_button"
        android:layout_below="@id/emailTextView"
        android:onClick="submitAction"/>

    <Button
        android:id="@+id/clear_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearButton"
        style="@style/clear_button"
        android:layout_below="@id/emailTextView"
        android:layout_toRightOf="@id/submit_button"
        android:onClick="clearFields"/>

</LinearLayout>
