<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_animations"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="top"
    tools:context="bnz8.uw.tacoma.edu.lookandfeel2.AnimationsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/spin_button"
            android:text="@string/spinButton"
            android:onClick="animateSpin"
            style="@style/uw_button" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/move_button"
            android:text="@string/moveButton"
            android:onClick="animateMove"
            style="@style/uw_button" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/fade_button"
            android:text="@string/fadeButton"

            style="@style/uw_button"/>

    </LinearLayout>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/animate_me"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/animating"
        android:gravity="center"
        android:background="@color/uwPurple"
        android:textColor="@color/uwGold"
        android:layout_margin="20dp"/>
</LinearLayout>







</LinearLayout>
